--- a/main.html
+++ b/main.html
@@ -21,14 +21,56 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
+			  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/facebook-new.png" alt="facebook-new"/>
+			  <img width="22" height="22" src="https://img.icons8.com/officexs/16/instagram-new.png" alt="instagram-new"/>
+              <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/twitter.png" alt="twitter"/>			
+			  <img width="22" height="22" src="https://img.icons8.com/softteal/24/linkedin.png" alt="linkedin"/>
+			  <img width="22" height="22" src="https://img.icons8.com/officexs/16/youtube.png" alt="youtube"/>
           </div>
         </div>
         <div class="link-boxes">
           <!-- your code here -->
+			<div class="content-links">
+				<h3><a>Home</a></h3>
+				<p><a>Home</a></p>
+				<p><a>Contact</a></p>
+				<p><a>About Us</a></p>
+				<p><a>Get started</a></p>
+			</div>
+			<div class="content-links">
+				<h3><a>About</a></h3>
+				<p><a>xyz</a></p>
+				<p><a>absd</a></p>
+				<p><a>frfftg</a></p>
+				<p><a>tgfbrher</a></p>
+			</div>
+			<div class="content-links">
+				<h3><a>Links</a></h3>
+				<p><a>ferwrb</a></p>
+				<p><a>trgrtte</a></p>
+				<p><a>FFrgt</a></p>
+				<p><a>Vdefr</a></p>
+			</div>
+			<div class="content-links">
+				<h3><a>Services</a></h3>
+				<p><a>fvfrtgrtg</a></p>
+				<p><a>gretg</a></p>
+				<p><a>erg fgf</a></p>
+				<p><a>erg fg</a></p>
+			</div>
+			<div class="content-links">
+				<h3><a>Contact</a></h3>
+				<p><a>8879887262</a></p>
+				<p><a>8879887262</a></p>
+				<p><a>8879887262</a></p>
+				<p><a>8879887262</a></p>
+			</div>
         </div>
       </div>
       <div class="bottom-details">
         <!-- your code here -->
+		  <p>Copyright <img width="14" height="14" src="https://img.icons8.com/material-outlined/24/copyright.png" alt="copyright"/> 2021 company.</p>
+		  <p>Privacy policy</p>
       </div>
     </footer>
   </body>
