--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
 				<p><a>Vdefr</a></p>
 			</div>
 			<div class="content-links">
-				<h3><a>Services</a></h3>
+				<h3><a>Social Media Page</a></h3>
 				<p><a>fvfrtgrtg</a></p>
 				<p><a>gretg</a></p>
 				<p><a>erg fgf</a></p>
