--- a/main.html
+++ b/main.html
@@ -30,35 +30,35 @@
         </div>
         <div class="link-boxes">
           <!-- your code here -->
-			<div class="content-links">
+			<div class="social-media">
 				<h3><a>Home</a></h3>
 				<p><a>Home</a></p>
 				<p><a>Contact</a></p>
 				<p><a>About Us</a></p>
 				<p><a>Get started</a></p>
 			</div>
-			<div class="content-links">
+			<div class="social-media">
 				<h3><a>About</a></h3>
 				<p><a>xyz</a></p>
 				<p><a>absd</a></p>
 				<p><a>frfftg</a></p>
 				<p><a>tgfbrher</a></p>
 			</div>
-			<div class="content-links">
+			<div class="social-media">
 				<h3><a>Links</a></h3>
 				<p><a>ferwrb</a></p>
 				<p><a>trgrtte</a></p>
 				<p><a>FFrgt</a></p>
 				<p><a>Vdefr</a></p>
 			</div>
-			<div class="content-links">
+			<div class="social-media">
 				<h3><a>Social Media Page</a></h3>
 				<p><a>fvfrtgrtg</a></p>
 				<p><a>gretg</a></p>
 				<p><a>erg fgf</a></p>
 				<p><a>erg fg</a></p>
 			</div>
-			<div class="content-links">
+			<div class="social-media">
 				<h3><a>Contact</a></h3>
 				<p><a>8879887262</a></p>
 				<p><a>8879887262</a></p>
