--- a/main.html
+++ b/main.html
@@ -6,12 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+	  <style>
+		  /* your code here */
+.content{
+	background-color:black;
+	padding:20px;
+}
+
+.top{
+	display:flex;
+	justify-content:space-between;
+	flex-wrap:wrap;
+	margin:10px;
+}
+.logo-details{
+	width:300px;
+}
+.logo_name{
+	color:white;
+	font-size:30px;
+}
+.media-icons img{
+	margin:5px;	
+}
+
+.link-boxes{
+	display:flex;
+	justify-content:space-between;
+	flex-wrap:wrap;
+}
+
+.social-media{
+	color:white;
+	margin:18px;
+}
+
+.bottom-details{
+	background-color:grey;
+	display:flex;
+	justify-content:space-between;
+	padding:0px 20px;
+	color:white;
+	flex-wrap:wrap;
+}
+	  </style>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
 
+	
   <body>
     <footer>
       <div class="content">
