--- a/main.html
+++ b/main.html
@@ -66,11 +66,14 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
-			  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/facebook-new.png" alt="facebook-new"/>
-			  <img width="22" height="22" src="https://img.icons8.com/officexs/16/instagram-new.png" alt="instagram-new"/>
-              <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/twitter.png" alt="twitter"/>			
-			  <img width="22" height="22" src="https://img.icons8.com/softteal/24/linkedin.png" alt="linkedin"/>
-			  <img width="22" height="22" src="https://img.icons8.com/officexs/16/youtube.png" alt="youtube"/>
+			  <div class="socialmedia">
+				  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/facebook-new.png" alt="facebook-new"/>
+			      <img width="22" height="22" src="https://img.icons8.com/officexs/16/instagram-new.png" alt="instagram-new"/>
+                  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/twitter.png" alt="twitter"/>			
+			      <img width="22" height="22" src="https://img.icons8.com/softteal/24/linkedin.png" alt="linkedin"/>
+			      <img width="22" height="22" src="https://img.icons8.com/officexs/16/youtube.png" alt="youtube"/>
+			  </div>
+			  
           </div>
         </div>
         <div class="link-boxes">
