--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
           <div class="logo-details">
             <span class="logo_name">company</span>
           </div>
-          <div class="media-icons">
+          <div class="media-icons socialmedia">
             <!-- your code here -->
 			  <div class="socialmedia">
 				  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/facebook-new.png" alt="facebook-new"/>
