--- a/main.html
+++ b/main.html
@@ -13,6 +13,9 @@
 	padding:20px;
 }
 
+.socialmedia{
+	display:flex;
+}
 .top{
 	display:flex;
 	justify-content:space-between;
@@ -66,7 +69,7 @@
           </div>
           <div class="media-icons socialmedia">
             <!-- your code here -->
-			  <div class="socialmedia">
+			  <div class="social media">
 				  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/facebook-new.png" alt="facebook-new"/>
 			      <img width="22" height="22" src="https://img.icons8.com/officexs/16/instagram-new.png" alt="instagram-new"/>
                   <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/twitter.png" alt="twitter"/>			
