--- a/main.html
+++ b/main.html
@@ -69,14 +69,11 @@
           </div>
           <div class="media-icons socialmedia">
             <!-- your code here -->
-			  <div class="social media">
-				  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/facebook-new.png" alt="facebook-new"/>
-			      <img width="22" height="22" src="https://img.icons8.com/officexs/16/instagram-new.png" alt="instagram-new"/>
-                  <img width="22" height="22" src="https://img.icons8.com/tiny-color/16/twitter.png" alt="twitter"/>			
-			      <img width="22" height="22" src="https://img.icons8.com/softteal/24/linkedin.png" alt="linkedin"/>
-			      <img width="22" height="22" src="https://img.icons8.com/officexs/16/youtube.png" alt="youtube"/>
-			  </div>
-			  
+				  <a><img width="22" height="22" src="https://img.icons8.com/tiny-color/16/facebook-new.png" alt="facebook-new"/></a>
+			      <a><img width="22" height="22" src="https://img.icons8.com/officexs/16/instagram-new.png" alt="instagram-new"/></a>
+                  <a><img width="22" height="22" src="https://img.icons8.com/tiny-color/16/twitter.png" alt="twitter"/></a>			
+			      <a><img width="22" height="22" src="https://img.icons8.com/softteal/24/linkedin.png" alt="linkedin"/></a>
+			      <a><img width="22" height="22" src="https://img.icons8.com/officexs/16/youtube.png" alt="youtube"/></a>
           </div>
         </div>
         <div class="link-boxes">
